# amyloid

./: Cargo.toml  LICENSE  README.md
src/: main.rs
test/: Q31Q05.fasta  Q31Q05_bare.fasta  multi.fasta  multi_fuzzy.fasta  single.fasta  single_fuzzy.fasta
